Mesh Explodes/Crashes Blender when using gravity option #37807

Closed
opened 2013-12-13 13:10:49 +01:00 by NG · 18 comments

System Information
win7/ I7 3930 / 32gb Ram / Gtx 560 TI 2GB

Blender Version
69.7 hash: 669b590

Short description of error

Mesh explodes withing 2-3 mins of making strokes on simple object, with dynamic topology enabled. (also happens in multires)

Exact steps for others to reproduce the error

Can not attach blender file, as it crashes when it happens.

  1. subdivide a cube once (apply)
  2. enter sculpt mode, enable dynamic, use clay strips brush on the object.
  3. turn up the gravity option

The mesh "explodes" and blender freezes.
It seems to happen when I use smooth (shift) or subtract (ctrl) while brushing strokes on mesh.

**System Information** win7/ I7 3930 / 32gb Ram / Gtx 560 TI 2GB **Blender Version** 69.7 hash: 669b590 **Short description of error** Mesh explodes withing 2-3 mins of making strokes on simple object, with dynamic topology enabled. (also happens in multires) **Exact steps for others to reproduce the error** Can not attach blender file, as it crashes when it happens. 1. subdivide a cube once (apply) 2. enter sculpt mode, enable dynamic, use clay strips brush on the object. 3. turn up the gravity option The mesh "explodes" and blender freezes. It seems to happen when I use smooth (shift) or subtract (ctrl) while brushing strokes on mesh.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by NG 2013-12-13 13:10:49 +01:00
Author

Added subscriber: @NGMAT

Added subscriber: @NGMAT
Author

screengrab of error

meshexplode.jpg

screengrab of error ![meshexplode.jpg](https://archive.blender.org/developer/F39697/meshexplode.jpg)
Author

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Author

sorry to be a pest, but is this being explored?, or @Psy-Fi missed this report? In recent version (18th December) now it just crashes when I use gravity altogether.

sorry to be a pest, but is this being explored?, or @Psy-Fi missed this report? In recent version (18th December) now it just crashes when I use gravity altogether.

Added subscriber: @brecht

Added subscriber: @brecht

It's normal for reports to take a few days or weeks before someone has time to investigate them.

It's normal for reports to take a few days or weeks before someone has time to investigate them.

Hi, I have seen this but I was tending to some other reports first.

Hi, I have seen this but I was tending to some other reports first.
Author

Apologies.

Apologies.

This issue was referenced by blender/blender-addons-contrib@94a2801322

This issue was referenced by blender/blender-addons-contrib@94a2801322e4bd07d40c12196fc65150297a54dc

This issue was referenced by 94a2801322

This issue was referenced by 94a2801322e4bd07d40c12196fc65150297a54dc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 94a2801322.

Closed by commit 94a2801322.
Author

hmmm I remember when shift + smoothing was an issue way back before dyntopo was in trunk. thanks for the quick work.

hmmm I remember when shift + smoothing was an issue way back before dyntopo was in trunk. thanks for the quick work.
Author

@Psy-Fi I have and issue, i'm not sure if it has to do with this commit, or the symmetry one. If you turn on "lock x" in the gravity option, and do some strokes with clay brush, and then use smooth, notice how it doesn't smooth well at all. You get some weird artifacts/lumpyness. Sorry, should I create new bug report? it smooths well without lock x on in the options. Maybe i'm not understand how its supposed to work. should I create a new bug report?

@Psy-Fi I have and issue, i'm not sure if it has to do with this commit, or the symmetry one. If you turn on "lock x" in the gravity option, and do some strokes with clay brush, and then use smooth, notice how it doesn't smooth well at all. You get some weird artifacts/lumpyness. Sorry, should I create new bug report? it smooths well without lock x on in the options. Maybe i'm not understand how its supposed to work. should I create a new bug report?

Yes, please use different reports for different issues, it makes it hard to track each issue if they are on the same thread.

Yes, please use different reports for different issues, it makes it hard to track each issue if they are on the same thread.

It doesn't sound like a bug though, locking will interfere with smoothing.

It doesn't sound like a bug though, locking will interfere with smoothing.
Author

ah ok, for some reason I thought it had something to do with symmetry. I never noticed the lock feature in old versions, I thought it was something new you added (thats not the case). My mistake. Obviously it locks an axis, which is why smooth is problematic. duh. Sorry for wasting your time.

ah ok, for some reason I thought it had something to do with symmetry. I never noticed the lock feature in old versions, I thought it was something new you added (thats not the case). My mistake. Obviously it locks an axis, which is why smooth is problematic. duh. Sorry for wasting your time.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37807
No description provided.